fix: too small margin on mobile

--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -54,8 +54,8 @@
 
 .header {
   margin: 0;
-  padding: 0 1rem;
-  line-height: 1.6;
+  padding: 1rem;
+  line-height: 1.3;
   font-size: 3rem;
   border-bottom: 0.4rem solid var(--primaryColor);
 
